--- a/rriywna.html
+++ b/rriywna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>
-        <a href="https://youtu.be/xvFZjo5PgG0?si=URabbwk7hqbC0V7O">Click here</a>
+        <a href="https://2no.co/2lEfn3">Click here</a>
     </div>
 </body>
 </html>
